--- a/Prepro/rapport.tex
+++ b/Prepro/rapport.tex
@@ -38,16 +38,21 @@
 
 \usepackage[T1]{fontenc}
 
-\author{Loïc \textsc{Castillo}\ Loris \textsc{Croce}}
+\author{Loïc \textsc{Castillo} -- Loris \textsc{Croce}}
 
-\title{\textbf{Rapport de pré-professionalisation}\\ \emph{Création d'un jeu vidéo}}
+\title{\Huge\textbf{Rapport de pré-professionalisation : }\\ \\ \emph{Enseignant-chercheur} \\ \dots\ \dots\ \dots}
 
 \begin{document}
 
 \maketitle{}
+
 \tableofcontents
 
-\abstract
-{
-    L'objectif de ce projet était de travailler en groupe afin de réaliser un jeu en quelques semaines, en utilisant différentes méthodes vues en cours, de l'idée à la réalisation du projet, en passant par la discussion et le choix de telle ou telle idée qui rendrait le tout plus avantageux, plus optimisé, plus fluide. 
-}
+\chapter{Présentation du métier}
+\section{Compétences requises}
+\section{Types de tâches à réaliser}
+\section{Lien avec les modules}
+\chapter{Outils}
+\chapter{Journée des métiers}
+
+\end{document}
