--- a/Prepro/rapport.tex
+++ b/Prepro/rapport.tex
@@ -105,12 +105,17 @@
 
     \subsection{Compétences théoriques}
 
-    D'un point de vue plus scolaire, l'ensemble des modules enseignés en licence font écho 
+    D'un point de vue plus scolaire, l'ensemble des modules enseignés font écho savoir nécessaire pour un chercheur en informatique.
+
+    Le cursus de licence fournit une base dans l'ensemble des champs étudiés en informatique, comme les bases de données, le génie logiciel, l'algorithmique, la théorie des graphes\dots
+    En master une spécialisation s'effectue et peut eventuellement permettre de déboucher sur un sujet de thèse.
 
 \chapter{Outils}
 
   \section{Littérature scientifique}
 
+  L'outil primordial quand on effectue une activité de recherche est de s'appuyer sur la littérature scientifique ses travaux.
+  
   \section{Autre}
 
   \LaTeX , R, autres langages
@@ -121,7 +126,11 @@
 
 Lors de cette jounée des métiers, 7 entreprises sont venus nous présenter leur travail et leur fonctionnement, puis 4 étudiants sont venus partager leur expérience dans le monde dans le monde de la Recherche.
 
+\section{Matinée}
+
 STERIA-SOPRA / CGI / ATOS / 
+
+\section{Après-midi}
 
 Le 4ème intervenant, Julien \textsc{Ponge}, est maître de conférence à l'INSA Lyon tout en étant développeur au sein de l'entreprise Red Hat. Monsieur \textsc{Ponge} a obtenu une licence et un master à l'Université Blaise Pascal, puis un doctorat à l'Université de Grenoble. Après avoir pratiqué le rôle d'enseignant-chercheur, il s'est rapproché du domaine privé afin d'obtenir une nouvelle expérience, tout en continuant d'enseigner à l'INSA. A Red Hat il travaille sur Vert.x, un framework Java basé sur les évènements, permettant d'obtenir une augmentation des performances.
 
