--- a/Prepro/rapport.tex
+++ b/Prepro/rapport.tex
@@ -92,7 +92,7 @@
 
   \section{Lien avec les modules}
 
-  	Le cursus universitaire fournit un certain nombre de d'élements en lien avec le métier d'enseignant chercheur. D'une part sur les compétences pratiques qu'il fait mobiliser et d'une autre part sur les savoir théoriques qu'il inculque.
+	Le cursus universitaire fournit un certain nombre de d'élements en lien avec le métier d'enseignant chercheur. D'une part sur les compétences pratiques qu'il fait mobiliser et d'une autre part sur les savoir théoriques qu'il inculque.
 
     \subsection{Compétences pratiques}
 
@@ -115,6 +115,14 @@
   \section{Littérature scientifique}
 
   L'outil primordial quand on effectue une activité de recherche est de s'appuyer sur la littérature scientifique ses travaux.
+
+  \subsection{Le libre accès}
+
+  Dans une optique de diffusion de la connaissance dans l'intérêt général, certaines revues scientifiques sont en libre accès et suivent le modèle d'\emph{auteur-payeur}.
+  On pourra citer : \emph{INFOCOMP Journal of Computer Science, JOT: Journal of Object Technology, Journal of Artificial Intelligence Research, Journal of Machine Learning, ResearchLogical Methods in Computer Science, Theory of Computing}
+
+  Il existe aussi 
+
   
   \section{Autre}
 
@@ -136,7 +144,7 @@ Le 4ème intervenant, Julien \textsc{Ponge}, est maître de conférence à l'INS
 
 
 % mec qui a parlé du NII japon 
-Braincube / Société Général (Auditeur des systèmes d'Informations, bénévolat en entreprise lol) / BUSI
+% Braincube / Société Général (Auditeur des systèmes d'Informations, bénévolat en entreprise lol) / BUSI
 
 Après ce cycle de conférences, 4 sont venus présenter leur projet de recherche.
 L'un d'eux, après avoir fait une école Polytechnique suivi d'un Master, effectue sa thèse au sein de Michelin, en tant que salarié. Elle travaille sur l'analyse de données télémétriques afin de pouvoir anticiper l'usure des pneus. Étant donné que cette chercheuse est salariée de Michelin, le résultat de ses travaux doivent permettre à Michelin de dégager une valeur ajoutée. C'est donc de la Recherche Opérationelle.
