--- a/Prepro/rapport.tex
+++ b/Prepro/rapport.tex
@@ -13,7 +13,7 @@
   {\par\medskip\noindent\minipage{\linewidth}}
   {\endminipage\par\medskip}
 
-\renewcommand{\baselinestretch}{1.2} 
+\renewcommand{\baselinestretch}{1.25} 
 
 \usepackage{caption}
 
@@ -85,10 +85,16 @@
     Avant même d'obtenir le diplôme doctoral, un doctorant peut commencer à donner des cours, sous les instructions d'un directeur de thèse.
     Dans le domaine de l'informatique, les cours dispensés peuvent prendre la forme de Cours magistraux et de travaux dirigés ou pratiques. 
 
+    L'activité d'enseignement comprend le cours donné en présentiel mais également la préparation du cours et la correction des travaux qui prend une part conséquente du temps d'enseignement.
 
-    Dans certains cas l'enseignement peut être dispensé par un intervenant (extérieur ou intérieur à la structure).
+    Dans certains cas un cours peut être dispensé par un intervenant (extérieur ou intérieur à la structure) qui n'est pas forcément enseignant-chercheur.
 
     \subsection{Recherche}
+
+    L'activité de recherche est très différentes selon la personne et sa spécialité. Certains travailleront dans de gros projets internationaux, quand d'autres œuvreront en équipes réduites.
+    Cette dernière comprend aussi un aspect gestion pour obtenir des financements et gérer des équipes selon le grade du chercheur.
+
+    Cependant, la constante est l'activité de relecture et de publication qui reste indépendante de la discipline.
 
   \section{Lien avec les modules}
 
@@ -107,8 +113,9 @@
 
     D'un point de vue plus scolaire, l'ensemble des modules enseignés font écho savoir nécessaire pour un chercheur en informatique.
 
-    Le cursus de licence fournit une base dans l'ensemble des champs étudiés en informatique, comme les bases de données, le génie logiciel, l'algorithmique, la théorie des graphes\dots
-    En master une spécialisation s'effectue et peut eventuellement permettre de déboucher sur un sujet de thèse.
+    Le cursus de licence fournit une base dans l'ensemble des champs étudiés en informatique, comme les bases de données, le génie logiciel, l'algorithmique, la théorie des graphes\dots\ qui sont indispensables pour une carrière dans la recherche et l'enseignement en informatique.
+
+    En master une spécialisation dans un domaine s'effectue et peut éventuellement permettre d'orienter un sujet de thèse.
 
 \chapter{Outils}
 
@@ -116,38 +123,56 @@
 
   L'outil primordial quand on effectue une activité de recherche est de s'appuyer sur la littérature scientifique ses travaux.
 
-  \subsection{Le libre accès}
+	  \subsection{Le libre accès}
 
-  Dans une optique de diffusion de la connaissance dans l'intérêt général, certaines revues scientifiques sont en libre accès et suivent le modèle d'\emph{auteur-payeur}.
-  On pourra citer : \emph{INFOCOMP Journal of Computer Science, JOT: Journal of Object Technology, Journal of Artificial Intelligence Research, Journal of Machine Learning, ResearchLogical Methods in Computer Science, Theory of Computing}
+	  Dans une optique de diffusion de la connaissance dans l'intérêt général, certaines revues scientifiques sont en libre accès et suivent le modèle d'\emph{auteur-payeur}.
+	  On pourra citer : \emph{INFOCOMP Journal of Computer Science, JOT: Journal of Object Technology, Journal of Artificial Intelligence Research, Journal of Machine Learning, Research, Logical Methods in Computer Science, Theory of Computing}
 
-  Il existe aussi 
+	  Il existe aussi en complément une plate-forme, HAL, \emph{Hyper Articles en Lignes} qui met à disposition un ensemble de publications scientifiques et permet à tous chercheur d'y déposer son travail. Cependant ces publications ne sont pas  \emph{évaluées} par un comité scientifique.
 
-  
+	  \subsection{Les revues payantes}
+
+	  Une grande partie de des publications scientifiques sont publiés dans des revues payantes, elles sont généralement achetées par les laboratoires et les chercheurs qui publient dedans ne sont pas rémunérés par l'éditeur de la revue.
+	  Il y a cependant un grand intérêt pour les chercheurs à publier dans ces revues, en effet ceux-ci sont évalués notamment sur la quantité de leurs publications et de la \emph{réputation} de la revue dans laquelle est ils publient.
+
   \section{Autre}
 
-  \LaTeX , R, autres langages
+  D'autres outils sont généralement utilisés dans le milieu de l'enseignement et la recherche. Pour la publication d'articles le logiciel \LaTeX est souvent utilisé car il facilite la mise en forme de rapport, articles et des livres ainsi que l'écriture de formules mathématiques.
+
+  On pourra aussi citer des logiciels utilisés en recherche tels que :
+  \begin{itemize}
+  	\item \textbf{R}, un langage destiné au traitement de données.
+  	\item \textbf{Matlab}, un logiciel destiné au calcul numérique. Et ses alternatives libres GNU Octave ou SageMath.
+  	\item \textbf{Maple}, un logiciel destiné au calcul formel.
+  \end{itemize}
 
 \chapter{Journée des métiers}
 
-
-
-Lors de cette jounée des métiers, 7 entreprises sont venus nous présenter leur travail et leur fonctionnement, puis 4 étudiants sont venus partager leur expérience dans le monde dans le monde de la Recherche.
+Lors de cette jounée des métiers, des professionnels sont venus nous présenter leur travail et le fonctionnement de leurs entreprises, puis 4 étudiants sont venus partager leur expérience dans le monde dans le monde de la Recherche.
 
 \section{Matinée}
 
-STERIA-SOPRA / CGI / ATOS / 
+Les 3 premières entreprises furent STERIA-SOPRA, CGI (Conseil, Intégration et Outsourcing) et ATOS, toutes des ESN, \emph{Entreprises de Services Numériques}. Celles-ci ont présenté les méthodes de travail de leurs entreprises, elles ont insisté sur le fait que le travail devait être effectué en équipe, la pratique de l'anglais orale étant un point important car les projets peuvent être internationaux, en raison de collaboration avec des sous-traitants étrangers. Par ailleurs, ces entreprises ont bien appuyé sur le fait que un développeur ne passerait pas tout son temps à coder, mais que les phases d'analyse et de gestion de projet en amont étaient aussi très importantes. Ils mirent également l'accent sur leur motivation à embaucher des alternants et des stagiaires dans notre corps de métier.
+
+Nous avons pu aussi entendre le récit de développeurs de ces entreprises qui étaient pour la plupart des anciens étudiants, leur discours étaient unanime, diversité de projet, équipe soudée, ambiance satisfaisante, sous le regard de leurs managers.
 
 \section{Après-midi}
 
-Le 4ème intervenant, Julien \textsc{Ponge}, est maître de conférence à l'INSA Lyon tout en étant développeur au sein de l'entreprise Red Hat. Monsieur \textsc{Ponge} a obtenu une licence et un master à l'Université Blaise Pascal, puis un doctorat à l'Université de Grenoble. Après avoir pratiqué le rôle d'enseignant-chercheur, il s'est rapproché du domaine privé afin d'obtenir une nouvelle expérience, tout en continuant d'enseigner à l'INSA. A Red Hat il travaille sur Vert.x, un framework Java basé sur les évènements, permettant d'obtenir une augmentation des performances.
+\paragraph{Julien Ponge} Maître de conférence à l'INSA Lyon tout en étant développeur au sein de l'entreprise Red Hat. M. \textsc{Ponge} a obtenu une licence et un master à l'Université Blaise Pascal, puis un doctorat à l'Université de Grenoble. Après avoir pratiqué le rôle d'enseignant-chercheur, il s'est rapproché du domaine privé afin d'obtenir une nouvelle expérience, tout en continuant d'enseigner à l'INSA. À Red Hat il travaille sur Vert.x, un framework Java basé sur les évènements, permettant d'obtenir une augmentation des performances.
+
+\paragraph{Valerian Callens} Auditeur des Systèmes d'Informations à la Société Générale nous a présenté son parcours et son métier depuis son lieu de travail en Roumanie. Avant de commencer sa carrière, M. Callens avait fait un V.I.E. (Volontariat International en Entreprise) de deux ans au sein de la Société Générale, cela lui a permit de découvrir la Roumanie, acquérir de l'expérience et vérifier que ce métier lui correspondait bien. Son métier consiste à observer les risques et faire des contrôles, afin de protéger des systèmes d'informations dont il a la charge.
+
+\paragraph{Frederic Andrès}  JAPON
 
 
 % mec qui a parlé du NII japon 
 % Braincube / Société Général (Auditeur des systèmes d'Informations, bénévolat en entreprise lol) / BUSI
 
-Après ce cycle de conférences, 4 sont venus présenter leur projet de recherche.
-L'un d'eux, après avoir fait une école Polytechnique suivi d'un Master, effectue sa thèse au sein de Michelin, en tant que salarié. Elle travaille sur l'analyse de données télémétriques afin de pouvoir anticiper l'usure des pneus. Étant donné que cette chercheuse est salariée de Michelin, le résultat de ses travaux doivent permettre à Michelin de dégager une valeur ajoutée. C'est donc de la Recherche Opérationelle.
+Après ce cycle de conférences, 4 doctorants sont venus présenter leur projet de recherche.
+% aborde eglameent l'interet de faire un these de partir à l'etranger blabla
+
+
+L'une d'eux, après avoir fait une école Polytechnique suivi d'un Master, effectue sa thèse au sein de Michelin, en tant que salariée, dans le cadre d'une thèse CIFR. Elle travaille sur l'analyse de données télémétriques afin de pouvoir anticiper l'usure des pneus. Étant donné que cette chercheuse est salariée de Michelin, le résultat de ses travaux doivent permettre à Michelin de dégager une valeur ajoutée.
 
 % thèse CIFR
 
